Fix modal window overflow

--- a/app/styles/bootstrap/modals.less
+++ b/app/styles/bootstrap/modals.less
@@ -42,6 +42,7 @@
   box-shadow: 1px 1px 60px rgba(0, 0, 0, 0.32);
   background-clip: padding-box;
   outline: 0;
+  overflow: hidden;
 }
 
 .modal-backdrop {
